force-app/main/default/objects/Partner_Request__c/Partner_Request__c.object-meta.xml
<CustomObject>
    <description>Stores the partner request created by channel partner portal user, like demo instrument request, Reagent rental request and other on/off boarding users</description>
    <label>Partner Request</label>
    <nameField>
        <displayFormat>PR-{0}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>