force-app/main/default/objects/Partner_Request__c/fields/Additional_Illumina_Resources_Needed__c.field-meta.xml
<CustomField>
    <fullName>Additional_Illumina_Resources_Needed__c</fullName>
    <description>Capture whether other Illumina resources are needed</description>
    <inlineHelpText>Please list any additional Illumina resources needed for the demo (examples: FAS Support for demo, Field Training, Webinar)</inlineHelpText>
    <label>Additional Illumina Resources Needed</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>