force-app/main/default/objects/Partner_Request__c/fields/Address_Country_Local__c.field-meta.xml
<CustomField>
    <fullName>Address_Country_Local__c</fullName>
    <description>Capture Country</description>
    <label>Address Country (Local)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>