force-app/main/default/objects/Partner_Request__c/fields/Agreement_Sent_to_ILMN__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Sent_to_ILMN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as part of DCP-32168</description>
    <label>Agreement Sent to ILMN</label>
    <type>Checkbox</type>
</CustomField>