force-app/main/default/objects/Partner_Request__c/fields/Course_Justification__c.field-meta.xml
<CustomField>
    <fullName>Course_Justification__c</fullName>
    <description>Justify ILT requested course(s)</description>
    <inlineHelpText>Detail as why this course is being requested</inlineHelpText>
    <label>Course Justification</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>