force-app/main/default/objects/Partner_Request__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>New team member email</description>
    <inlineHelpText>Company email address.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>