force-app/main/default/objects/Partner_Request__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>New team member first name</description>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>