force-app/main/default/objects/Partner_Request__c/fields/Geohraphical_Area_of_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Geohraphical_Area_of_Coverage__c</fullName>
    <description>Indicates which geography the team member covers.</description>
    <inlineHelpText>Indicate which territories are covered by this team member.</inlineHelpText>
    <label>Geographical Area of Coverage</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>