force-app/main/default/objects/Partner_Request__c/fields/How_Can_We_Help__c.field-meta.xml
<CustomField>
    <fullName>How_Can_We_Help__c</fullName>
    <description>Allow partners to describe what help they need</description>
    <inlineHelpText>Let us know how we can help</inlineHelpText>
    <label>How Can We Help</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>