force-app/main/default/objects/Partner_Request__c/fields/Illumina_Reagent_Demo_Date__c.field-meta.xml
<CustomField>
    <fullName>Illumina_Reagent_Demo_Date__c</fullName>
    <description>Used to capture decision makers</description>
    <inlineHelpText>Date when Illumina Reagent Demo will be performed</inlineHelpText>
    <label>Illumina Reagent Demo Date</label>
    <type>Date</type>
</CustomField>