force-app/main/default/objects/Partner_Request__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Field to store Last Name.</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>