force-app/main/default/objects/Partner_Request__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <description>Used to determine which license type should be initially assigned to CP. GCP will analyze usage on a quarterly basis and adjust license types as needed.</description>
    <inlineHelpText>Identifies how often the user needs access to the Partner Portal:

1) None – No access to the ICPP (Portal).
2) Portal Use – Occasional Login (Light user) – User will use Partner Portal 3 times a week or LESS (occasional portal use)
3) Portal Use – Daily Login” (Power User) - User will use Partner Portal 4 times a week or MORE (daily portal use)</inlineHelpText>
    <label>Portal Use / License Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Access_Configuration__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Login License (Light User)</fullName>
                <label>Portal Use – Occasional Login (Light user)</label>
            </value>
            <value>
                <fullName>Full License (Power User)</fullName>
                <label>Portal Use – Daily Login (Power User)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>