force-app/main/default/objects/Partner_Request__c/fields/LOA_Begin__c.field-meta.xml
<CustomField>
    <fullName>LOA_Begin__c</fullName>
    <description>Notifies Global Channel Partners when Channel Partner team member is on LOA</description>
    <inlineHelpText>Leave of absence start date.</inlineHelpText>
    <label>LOA Begin</label>
    <type>Date</type>
</CustomField>