force-app/main/default/objects/Partner_Request__c/fields/Market_Segments__c.field-meta.xml
<CustomField>
    <fullName>Market_Segments__c</fullName>
    <description>Market segment for the reagent request</description>
    <inlineHelpText>Please select the primary market segment for the demo request.</inlineHelpText>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market_Segments</valueSetName>
    </valueSet>
</CustomField>