force-app/main/default/objects/Partner_Request__c/fields/Offboard_Date__c.field-meta.xml
<CustomField>
    <fullName>Offboard_Date__c</fullName>
    <description>Used to determine when the Channel Partner&apos;s access to Illumina systems is removed</description>
    <inlineHelpText>Indicate on what date the team member needs to be offboarded and removed from Illumina systems.</inlineHelpText>
    <label>Offboard Date</label>
    <type>Date</type>
</CustomField>