force-app/main/default/objects/Partner_Request__c/fields/Onboard_Date__c.field-meta.xml
<CustomField>
    <fullName>Onboard_Date__c</fullName>
    <description>Used to determine when the Channel Partner&apos;s access to Illumina systems is removed</description>
    <inlineHelpText>Indicate on what date the team member needs to be onboarded and added to Illumina systems.</inlineHelpText>
    <label>Onboard Date</label>
    <type>Date</type>
</CustomField>