force-app/main/default/objects/Partner_Request__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Institution phone number (account)</description>
    <inlineHelpText>Primary phone number.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>