force-app/main/default/objects/Partner_Request__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Field to store Postal Code.</description>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>