force-app/main/default/objects/Partner_Request__c/fields/Reagent_Kit_Switching_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Reagent_Kit_Switching_Criteria__c</fullName>
    <description>Indicates factors that would switch the customer from current reagent kit to Illumina&apos;s reagent kit</description>
    <inlineHelpText>List the lab&apos;s criteria for change from current Reagent Kit to Illumina Reagent Kit</inlineHelpText>
    <label>Reagent Kit Switching Criteria</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>