force-app/main/default/objects/Partner_Request__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>This will be Account Region from Channel Partner Account</description>
    <formula>Customer_Account__r.Territory_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The region the Channel Partner organization belongs to.</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>