force-app/main/default/objects/Partner_Request__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <description>Indicates who the new team member reports to</description>
    <inlineHelpText>Please indicate who this team member reports to.</inlineHelpText>
    <label>Reporting Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>