force-app/main/default/objects/Partner_Request__c/fields/Requested_Courses__c.field-meta.xml
<CustomField>
    <fullName>Requested_Courses__c</fullName>
    <description>Summary of requested courses.</description>
    <inlineHelpText>Displays the courses opted.</inlineHelpText>
    <label>Requested Courses</label>
    <type>TextArea</type>
</CustomField>