force-app/main/default/objects/Partner_Request__c/fields/Sample_Source__c.field-meta.xml
<CustomField>
    <fullName>Sample_Source__c</fullName>
    <description>Captures sample source</description>
    <label>Sample Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Blood</fullName>
            </value>
            <value>
                <fullName>Tissues</fullName>
            </value>
            <value>
                <fullName>Cell Culture</fullName>
            </value>
            <value>
                <fullName>Single Cell</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
            <value>
                <fullName>Soil</fullName>
            </value>
            <value>
                <fullName>FFPE Tissues</fullName>
            </value>
            <value>
                <fullName>Buccal Swabs</fullName>
            </value>
            <value>
                <fullName>Virus</fullName>
            </value>
            <value>
                <fullName>Bacteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>