force-app/main/default/objects/Partner_Request__c/fields/Timeframe_for_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_for_Attendance__c</fullName>
    <description>Provide timeline for requested ILT courses</description>
    <inlineHelpText>Please specify time frame for instructor-led training attendance.</inlineHelpText>
    <label>Timeframe for Attendance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>