force-app/main/default/objects/Partner_Request__c/fields/Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as a part of DCP-32168</description>
    <label>Ultimate Consignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Requests (Ultimate Consignee)</relationshipLabel>
    <relationshipName>Partner_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>