force-app/main/default/objects/Partner_Request__c/fields/Was_Employed_by_Illumina__c.field-meta.xml
<CustomField>
    <fullName>Was_Employed_by_Illumina__c</fullName>
    <description>Indicates whether new team member was ever employed by Illumina</description>
    <inlineHelpText>Was this employee ever employed by Illumina or a different Illumina Channel Partner?</inlineHelpText>
    <label>Was Employed by Illumina</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>