force-app/main/default/objects/Partner_Request__c/recordTypes/Demo_Instrument_Request.recordType-meta.xml
<RecordType>
    <fullName>Demo_Instrument_Request</fullName>
    <active>true</active>
    <description>The goal of this program is to further reduce the upfront investment to own demo units for shows and demonstration; ultimately helping drive sales and shortening the sales cycle.</description>
    <label>Demo Instrument Request</label>
</RecordType>