force-app/main/default/objects/Partner_Request__c/recordTypes/Demo_Reagent_Request.recordType-meta.xml
<RecordType>
    <fullName>Demo_Reagent_Request</fullName>
    <active>false</active>
    <description>The goal of this program is to increase Illumina market share on library prep solutions and to create tools to capture ROI of demo reagents.</description>
    <label>Demo Reagent Request</label>
</RecordType>