force-app/main/default/objects/Partner_Request__c/recordTypes/Help.recordType-meta.xml
<RecordType>
    <fullName>Help</fullName>
    <active>true</active>
    <description>Submit your Illumina Partner Portal related inquiries or issues.</description>
    <label>Help Request</label>
</RecordType>