force-app/main/default/objects/Partner_Request__c/recordTypes/Instructor_Led_Training_Request.recordType-meta.xml
<RecordType>
    <fullName>Instructor_Led_Training_Request</fullName>
    <active>true</active>
    <description>Select from the available catalog of Instructor-Led trainings needed to grow your genomics business.</description>
    <label>Instructor-Led Training Request</label>
</RecordType>