force-app/main/default/objects/Partner_Request__c/recordTypes/New_Account_Request.recordType-meta.xml
<RecordType>
    <fullName>New_Account_Request</fullName>
    <active>true</active>
    <description>Request a new prospect account that can be used to manage opportunities. The request will be routed to your Illumina Sales Representative for review.</description>
    <label>New Account Request</label>
</RecordType>