force-app/main/default/objects/Partner_Request__c/recordTypes/Portal_Request_Add_Team_Member.recordType-meta.xml
<RecordType>
    <fullName>Portal_Request_Add_Team_Member</fullName>
    <active>true</active>
    <description>Use this request to onboard new team members. Team members are added to the appropriate Illumina systems including the Partner Portal.</description>
    <label>Portal Request - Add Team Member</label>
</RecordType>