force-app/main/default/objects/Partner_Request__c/recordTypes/Portal_Request_Remove_Team_Member.recordType-meta.xml
<RecordType>
    <fullName>Portal_Request_Remove_Team_Member</fullName>
    <active>true</active>
    <description>Use this request to offboard team members from the Illumina Partner Portal and related systems.</description>
    <label>Portal Request - Remove Team Member</label>
</RecordType>