force-app/main/default/objects/Partner_Request__c/recordTypes/Portal_Request_Update_Member_Request.recordType-meta.xml
<RecordType>
    <fullName>Portal_Request_Update_Member_Request</fullName>
    <active>true</active>
    <description>Complete this form when a team member is taking a Leave of Absence (LOA) or their Contact record requires an update to key fields / attributes.</description>
    <label>Portal Request - Update Member Request</label>
</RecordType>