force-app/main/default/objects/Partner_Request__c/recordTypes/Reagent_Rental_Request.recordType-meta.xml
<RecordType>
    <fullName>Reagent_Rental_Request</fullName>
    <active>true</active>
    <description>This program is intended to provide an avenue for increment instrument sales by reducing the upfront investment for Illumina technology where CapEx spending is a challenge</description>
    <label>Reagent Rental Request</label>
</RecordType>