force-app/main/default/objects/Partner_Request__c/validationRules/Check_JobCategory_NonVAD.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_JobCategory_NonVAD</fullName>
    <active>true</active>
    <description>CMCM 711: Job Category FAS, FAS/Sales, FAS/Clinical Specialist, FSE can be selected for only Value Added Distributors.</description>
    <errorConditionFormula>AND(
	RecordType.DeveloperName== $Label.PortalRequestAddTeamMember,
	(TEXT(Owner:User.Contact.Account.Channel_Partner_Type__c ) != $Label.UI_Label_Value_Added_Distributor),	
	OR(
		(TEXT(Job_Category__c) = $Label.FAS),
		(TEXT(Job_Category__c) = $Label.FAS_Clinical_Specialist),
		(TEXT(Job_Category__c) = $Label.FAS_Sales),
		(TEXT(Job_Category__c) = $Label.FSE)
	),
	/*Bypass criterias are mentioned below*/
	NOT (
		OR (
			$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
			$Profile.Name = $Label.ProfileSystemAdmin
		)
	)
)</errorConditionFormula>
    <errorMessage>The Job Category you have selected should be used by VAD (Value-Added Distributors) only - those Channel Partners who provide field services / support for Illumina products. Please select another option.</errorMessage>
</ValidationRule>