force-app/main/default/objects/Partner_Request__c/validationRules/CheckIfAnyUpdateDetailAdded.validationRule-meta.xml
<ValidationRule>
        <fullName>CheckIfAnyUpdateDetailAdded</fullName>
        <active>true</active>
        <description>Check if member details added for update.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName=$Label.PortalRequestUpdateMemberRequest,
ISBLANK(LOA_Begin__c),
ISBLANK(LOA_End__c),
ISBLANK(First_Name__c),
ISBLANK(Last_Name__c),
ISBLANK(Phone__c),
ISBLANK(Email__c),
ISBLANK(TEXT(Job_Category__c)),
ISBLANK(Title__c),
ISBLANK(Other_Comments__c),
NOT(Channel_Partner_eMail_Opt_Out__c),
NOT(
OR (
$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
$Profile.Name = $Label.ProfileSystemAdmin,
$Profile.Name = $Label.ProfileDataSteward
))
)</errorConditionFormula>
        <errorMessage>Please enter member information to update.</errorMessage>
</ValidationRule>