force-app/main/default/objects/Partner_Request__c/validationRules/CheckLeaveOfAbsenceDetails.validationRule-meta.xml
<ValidationRule>
        <fullName>CheckLeaveOfAbsenceDetails</fullName>
        <active>true</active>
        <description>Check required LOA field for Portal Request - Update Member Request record type.</description>
        <errorConditionFormula>AND(
RecordType.DeveloperName=$Label.PortalRequestUpdateMemberRequest,
OR(
AND(ISBLANK(LOA_Begin__c),NOT(ISBLANK(LOA_End__c))),
AND(ISBLANK(LOA_End__c),NOT(ISBLANK(LOA_Begin__c)))),
NOT(
OR (
$Setup.cs_Apex_Settings__c.Bypass_All_Validations__c,
$Profile.Name = $Label.ProfileSystemAdmin,
$Profile.Name = $Label.ProfileDataSteward
))
)</errorConditionFormula>
        <errorMessage>Please enter LOA Begin, LOA End date.</errorMessage>
    </validationRules>
</ValidationRule>