force-app/main/default/objects/Partner_Request__c/listViews/Approved_New_Account_Requests.listView-meta.xml
<ListView>
    <fullName>Approved_New_Account_Requests</fullName>
    <columns>NAME</columns>
    <columns>Partner_Organization__c</columns>
    <columns>Region__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Account_Name_Local__c</columns>
    <columns>Status__c</columns>
    <columns>Primary_Market_Segment__c</columns>
    <columns>Other_Market_Semgnets__c</columns>
    <columns>Customer_Type__c</columns>
    <columns>Lab_Type__c</columns>
    <columns>Clinical_Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Request__c.New_Account_Request</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <label>Approved New Account Requests</label>
    <language>en_US</language>
</ListView>