force-app/main/default/objects/Partner_Request__c/listViews/Demo_Instrument_Request_List_View.listView-meta.xml
<ListView>
    <fullName>Demo_Instrument_Request_List_View</fullName>
    <columns>NAME</columns>
    <columns>Partner_Organization__c</columns>
    <columns>Instrument_Requested__c</columns>
    <columns>Region__c</columns>
    <columns>Strategy_and_Additional_Revenue__c</columns>
    <columns>Customer_Account__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Request__c.Demo_Instrument_Request</value>
    </filters>
    <label>Demo Instrument Requests</label>
    <language>en_US</language>
</ListView>