force-app/main/default/objects/Partner_Request__c/listViews/Demo_Reagent_Request_List_View.listView-meta.xml
<ListView>
    <fullName>Demo_Reagent_Request_List_View</fullName>
    <columns>NAME</columns>
    <columns>Partner_Organization__c</columns>
    <columns>Region__c</columns>
    <columns>Customer_Account__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>Reagent_Kit_Features__c</columns>
    <columns>Illumina_Reagent_Demo_Date__c</columns>
    <columns>Instrument_Used_During_Demo__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Request__c.Demo_Reagent_Request</value>
    </filters>
    <label>Demo Reagent Requests</label>
    <language>en_US</language>
</ListView>