force-app/main/default/objects/Partner_Request__c/listViews/Help_Requests.listView-meta.xml
<ListView>
    <fullName>Help_Requests</fullName>
    <columns>NAME</columns>
    <columns>Partner_Organization__c</columns>
    <columns>Region__c</columns>
    <columns>How_Can_We_Help__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Request__c.Help</value>
    </filters>
    <label>Help Requests</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
        <allPartnerUsers/>
    </sharedTo>
</ListView>