force-app/main/default/objects/Partner_Request__c/listViews/Instructor_Led_Training_List_View.listView-meta.xml
<ListView>
    <fullName>Instructor_Led_Training_List_View</fullName>
    <columns>NAME</columns>
    <columns>Partner_Organization__c</columns>
    <columns>Requested_Courses__c</columns>
    <columns>Timeframe_for_Attendance__c</columns>
    <columns>Course_Justification__c</columns>
    <columns>Region__c</columns>
    <columns>Customer_Account__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Request__c.Instructor_Led_Training_Request</value>
    </filters>
    <label>Instructor-Led Training Requests</label>
    <language>en_US</language>
</ListView>