force-app/main/default/objects/Partner_Request__c/listViews/Partner_Portal_Add_Team_Member_Requests.listView-meta.xml
<ListView>
    <fullName>Partner_Portal_Add_Team_Member_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Partner_Organization__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Job_Category__c</columns>
    <columns>Reporting_Manager__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Request__c.Portal_Request_Add_Team_Member</value>
    </filters>
    <label>Partner Portal Add Team Member Requests</label>
    <language>en_US</language>
</ListView>