force-app/main/default/objects/Partner_Request__c/listViews/Partner_Portal_Remove_Team_Member_Reques.listView-meta.xml
<ListView>
    <fullName>Partner_Portal_Remove_Team_Member_Reques</fullName>
    <columns>NAME</columns>
    <columns>Partner_Organization__c</columns>
    <columns>Team_Member_Name__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Request__c.Portal_Request_Remove_Team_Member</value>
    </filters>
    <label>Partner Portal Team Member Removals</label>
    <language>en_US</language>
</ListView>