force-app/main/default/objects/Partner_Request__c/listViews/Remove_Member_Requests.listView-meta.xml
<ListView>
    <fullName>Remove_Member_Requests</fullName>
    <columns>NAME</columns>
    <columns>Partner_Organization__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Request__c.Portal_Request_Remove_Team_Member</value>
    </filters>
    <label>Remove Member Requests</label>
    <language>en_US</language>
</ListView>