force-app/main/default/objects/Partner_Request__c/listViews/Update_Partner_Request.listView-meta.xml
<ListView>
    <fullName>Update_Partner_Request</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Partner_Organization__c</columns>
    <columns>Team_Member_Name__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Partner_Request__c.Portal_Request_Update_Member_Request</value>
    </filters>
    <label>Update Partner Request</label>
    <language>en_US</language>
</ListView>